# SPRITE_SEER

./: .gitignore  CMakeLists.txt  README.md  run.bat  run.sh
shaders/: compile.bat  main.frag  main.vert
shaders/compiled/: main_frag.spv  main_vert.spv
src/: .util.h.swp  asset_manager.cpp  asset_manager.h  engine.cpp  engine.h  main.cpp  texture.cpp  texture.h  types.h  util.cpp  util.h
src/renderables/: .player.cpp.swp  player.cpp  player.h  rectangle.cpp  rectangle.h  renderable_manager.cpp  renderable_manager.h
